--- a/style.css
+++ b/style.css
@@ -3,3 +3,60 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+.container1 {
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+    grid-template-rows: 1fr 5fr;
+}
+
+#sidebar {
+    border: 1px solid blue;
+    background-color: rgb(0, 145, 255);
+    color: white;
+    grid-row: 1 / 3;
+}
+
+#heading {
+    border: 1px solid green;
+}
+
+#main-content {
+    border: 1px solid red;
+    background-color: rgb(219, 225, 230); 
+}
+
+.search {
+    background-color: rgb(219, 225, 230);
+    padding: .8rem;
+    width: 45%;
+    border-radius: 15px;
+}
+
+.links {
+    background-color: rgb(0, 145, 255);
+    width: 5%;
+    text-align: center;
+    color: white;
+    border-radius: 10px;
+    padding: .5rem;
+}
+
+.projects {
+    
+    padding: 1rem 1.5rem;
+    background-color: white;
+    border-radius: 8px;
+}
+
+.container2 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 1.5rem;
+}
+
+#ad {
+    grid-column: 1;
+}
+
