--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+:root {
+    margin: 0 20rem;
+    background-color: black;
+}
+
 .container1 {
     display: grid;
     grid-template-columns: 1fr 5fr;
@@ -11,25 +16,27 @@
 }
 
 #sidebar {
-    border: 1px solid blue;
     background-color: rgb(0, 145, 255);
     color: white;
     grid-row: 1 / 3;
+    padding: 2rem;
 }
 
 #heading {
-    border: 1px solid green;
+    padding: 1.1rem;
+    background-color: white;
 }
 
+h3 {
+    margin: 1.5rem 1.5rem .5rem;
+}
 #main-content {
-    border: 1px solid red;
     background-color: rgb(219, 225, 230); 
 }
 
 .search {
     background-color: rgb(219, 225, 230);
-    padding: .8rem;
-    width: 45%;
+    width: 70%;
     border-radius: 15px;
 }
 
@@ -38,15 +45,26 @@
     width: 5%;
     text-align: center;
     color: white;
-    border-radius: 10px;
+    border-radius: 50px;
     padding: .5rem;
+    margin: .5rem;
 }
 
+/* .intro {
+    position: relative;
+    right: 48rem;
+} */
+
 .projects {
-    
-    padding: 1rem 1.5rem;
+    padding: 2rem 1.5rem;
     background-color: white;
     border-radius: 8px;
+    margin: 0 1rem;
+    width: 100%;
+}
+
+#announcments, #trending {
+    width: 75%;
 }
 
 .container2 {
@@ -58,5 +76,26 @@
 
 #ad {
     grid-column: 1;
+}
+
+.flex-container1{
+    display: flex;
+    justify-content: space-between;
+    margin: 0 1.5rem;
+}
+
+.flex-container2 {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 2rem;
+}
+
+#project {
+    display: inline-block;
+}
+
+#announcments {
+    display: inline-block;
+    text-align: right;
 }
 
