--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 }
 
 .container1 {
-    display: grid;
+    display: grid;                
     grid-template-columns: 1fr 5fr;
     grid-template-rows: 1fr 5fr;
 }
@@ -22,6 +22,14 @@
     padding: 2rem;
 }
 
+#dashboard, .home {
+    margin-bottom: 2rem;
+}
+                                
+.home p, .settings p {
+    padding: .5rem;
+}
+
 #heading {
     padding: 1.1rem;
     background-color: white;
@@ -30,6 +38,7 @@
 h3 {
     margin: 1.5rem 1.5rem .5rem;
 }
+
 #main-content {
     background-color: rgb(219, 225, 230); 
 }
@@ -42,18 +51,14 @@ h3 {
 
 .links {
     background-color: rgb(0, 145, 255);
-    width: 5%;
+    width: 100%;
     text-align: center;
     color: white;
     border-radius: 50px;
-    padding: .5rem;
-    margin: .5rem;
+    padding: .2rem 1rem;
+    display: flex;
+    align-items: center;
 }
-
-/* .intro {
-    position: relative;
-    right: 48rem;
-} */
 
 .projects {
     padding: 2rem 1.5rem;
@@ -86,8 +91,13 @@ h3 {
 
 .flex-container2 {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-around;
     margin-top: 2rem;
+}
+
+.flex-container3 {
+    display: flex;
+    justify-content: space-evenly;
 }
 
 #project {
