--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 :root {
@@ -19,7 +20,9 @@
     background-color: rgb(0, 145, 255);
     color: white;
     grid-row: 1 / 3;
-    padding: 2rem;
+    padding: 2rem 4rem;
+    font-size: 1.2rem;
+    font-weight: bold;
 }
 
 #dashboard, .home {
@@ -31,12 +34,12 @@
 }
 
 #heading {
-    padding: 1.1rem;
+    padding-top: 1.5rem;
     background-color: white;
 }
 
-h3 {
-    margin: 1.5rem 1.5rem .5rem;
+.intro {
+    font-weight: bold;
 }
 
 #main-content {
@@ -45,27 +48,30 @@ h3 {
 
 .search {
     background-color: rgb(219, 225, 230);
-    width: 70%;
+    height: 3.3ch;
+    width: 60%;
     border-radius: 15px;
 }
 
 .links {
     background-color: rgb(0, 145, 255);
-    width: 100%;
-    text-align: center;
     color: white;
     border-radius: 50px;
-    padding: .2rem 1rem;
     display: flex;
     align-items: center;
+    justify-content: center;
+    width: 17%;
+    height: 4ch;
+    margin: 0 .8rem;
 }
 
 .projects {
-    padding: 2rem 1.5rem;
+    padding: 1rem;
     background-color: white;
     border-radius: 8px;
     margin: 0 1rem;
     width: 100%;
+    font-size: .9rem; 
 }
 
 #announcments, #trending {
@@ -83,21 +89,25 @@ h3 {
     grid-column: 1;
 }
 
-.flex-container1{
+.flex-container1 {
     display: flex;
-    justify-content: space-between;
-    margin: 0 1.5rem;
+    justify-content: space-around;
+    align-items: center;
+    
 }
 
 .flex-container2 {
     display: flex;
     justify-content: space-around;
     margin-top: 2rem;
+    margin-left: 4rem;
 }
 
 .flex-container3 {
+    width: 50%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: flex-end;
+    align-items: flex-end;
 }
 
 #project {
@@ -106,6 +116,17 @@ h3 {
 
 #announcments {
     display: inline-block;
-    text-align: right;
+    text-align: left;
 }
 
+#announcments > p {
+    font-size: .6rem;
+}
+
+img {
+    float: left;
+}
+
+.pfp {
+    border-radius: 50%;
+}
